tests/lean/kernelMVarBug.lean.expected.out
kernelMVarBug.lean:5:15-5:20: error: failed to synthesize
  HAdd α α α
use `set_option diagnostics true` to get diagnostic information
